Use `calendar.txt` to cleanly split current/next schedule, when available